# cookiecutter-python-template

./: cookiecutter.json
.github/: CODEOWNERS
.github/workflows/: ci.yml  pr-labeler.yml  release-please.yml
{{cookiecutter.project_slug}}/: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
{{cookiecutter.project_slug}}/.github/workflows/: ci.yml
{{cookiecutter.project_slug}}/src/{{cookiecutter.package_name}}/: __init__.py  main.py
{{cookiecutter.project_slug}}/tests/: test_main.py
