[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "{{ cookiecutter.project_slug }}"
version = "0.1.0"
description = "{{ cookiecutter.project_description }}"
authors = [
    { name = "{{ cookiecutter.author_name }}", email = "{{ cookiecutter.author_email }}" }
]
requires-python = ">={{ cookiecutter.python_version }}"
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: {{ cookiecutter.python_version }}",
]

[project.urls]
"Homepage" = ""
"Bug Tracker" = ""
"Repository" = ""

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "deptry",
    "ty-alpha",
]

[tool.hatch.version]
path = "src/{{ cookiecutter.package_name }}/__init__.py"

[tool.ruff]
line-length = 88
target-version = "py{{ cookiecutter.python_version.replace('.', '') }}"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "A", "C4", "T20", "SIM", "PTH"]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.deptry]
ignore_missing = []
ignore_unused = []
ignore_transitive = []
ignore_misplaced_dev = []

[tool.ty]
# Configuration for the ty type checker can be added here as it becomes available.
